# x-filter

./: .env.example  404.html  index.html  input.txt  mkdocs.yml  pyproject.toml  results.md  sitemap.xml
.github/workflows/: ci.yml
concepts/: index.html
development/: index.html
development/brian/: index.html
development/design/: index.html
development/todo/: index.html
docs/: index.md
docs/development/: design.md  index.md  todo.md
docs/development/brian/: index.md
docs/getting_started/: index.md  organization.md  setup.md  usage.md
docs/product/: goal.md  index.md
getting_started/: index.html
getting_started/organization/: index.html
getting_started/setup/: index.html
getting_started/usage/: index.html
product/: index.html
product/goal/: index.html
scripts/: cli_interface.py  control_user.py  data_cleanup.py  database.py  send_event.py  temp.py  terminator.py
search/: search_index.json
tests/: logs.txt  utils.py
tests/integration/: examples.py
tests/saved_runs/: run_0.txt  run_1.txt  run_18.txt
tests/unit/ai/: test_filter_run.py  test_stages.py
tests/unit/data/: test_sqlite.py
tests/unit/x/: test_tweepy.py  test_x_endpoints.py
x_filter/: app.py  websocket.py
x_filter/ai/: chat.py  chosen.py  filter.py  instructor.py  main.py
x_filter/api/: authentication.py  chat.py  filter_settings.py  other.py  receive_event.py  run_filter.py
x_filter/data/: __init__.py  database.py
x_filter/utils/: conversational.py  extraction.py  security.py
x_filter/x/: helpers.py  tweepy_client.py  wrapper.py
(+5 files in other folders)
