[tool.poetry]
name = "x-filter"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "pydantic"
pydantic = "asyncio"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
