[tool.poetry]
name = "x-filter"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.2"
pydantic = "^2.7.0"
instructor = "^1.2.2"
tweepy = "^4.14.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.9"}
mkdocs = "^1.5.3"
requests = "^2.31.0"
pymdown-extensions = "^10.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
